# netbox-orb-extreme-xiq

./: .gitignore  AGENTS.md  README.md  SECURITY.md  agent.yaml  pyproject.toml  renovate.json  test.json  test_mapping.py  workers.txt
.cursor/: mcp.json
.devcontainer/: Dockerfile  README.md  cleanup.sh  create-netbox-token.sh  devcontainer.json  docker-compose.yml  netbox-mcp.sh  setup.sh
.devcontainer/diode/: README.md  docker-compose.yaml
.devcontainer/netbox/: Dockerfile
.devcontainer/netbox/env/: netbox.env.example  postgres.env.example  redis-cache.env.example  redis.env.example
.github/workflows/: ci.yml
dev/: README.md  create-netbox-token.sh  docker-compose.yml  netbox-mcp.sh  setup.sh
dev/diode/: docker-compose.yaml
dev/diode/initdb.d/: 01-init-databases.sh
dev/netbox/: plugins.py
dev/netbox/env/: netbox.env  netbox.env.example  postgres.env  postgres.env.example  redis-cache.env  redis-cache.env.example  redis.env  redis.env.example
orb_extreme_platformone/: __init__.py  __main__.py  backend.py  bootstrap.py  client.py  identity.py  mapper.py  urls.py
orb_extreme_platformone/extract/: __init__.py  clusters.py  correlate.py  ports.py  retrieve.py  tables.py  wireless.py
orb_extreme_platformone/fetch/: __init__.py  clusters.py  correlate.py  ports.py  retrieve.py  tables.py  wireless.py
orb_extreme_platformone/mapper/: __init__.py  common.py  devices.py  ports.py  virtual_chassis.py  wireless.py
orb_extreme_platformone/transform/: __init__.py  common.py  devices.py  ports.py  virtual_chassis.py  wireless.py
orb_extreme_xiq/: __init__.py  backend.py  bootstrap.py  client.py  identity.py  mapper.py
tests/: conftest.py  test_backend.py  test_bootstrap.py  test_client.py  test_identity.py  test_mapper.py  test_openapi_contract.py  test_transform.py  test_urls.py
