[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-extreme-xiq"
# Single-sourced from orb_extreme_xiq.__version__ (see [tool.setuptools.dynamic]).
dynamic = ["version"]
description = "ExtremeCloud IQ discovery worker for the NetBox Labs Orb Agent (ingests into NetBox via Diode)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",       # all XIQ HTTP calls, including the legacy portlist endpoint
    # The Orb Agent image already ships these, but pin them here so the
    # package is testable/runnable standalone too. Confirm the exact versions
    # against the orb-agent image you deploy on -- the Backend contract
    # (describe()/run()) and Diode entity kwargs are both generated code that
    # can move between releases.
    "netboxlabs-diode-sdk>=1.0.0",
    "netboxlabs-orb-worker>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25", "ruff>=0.15"]

# The import name the worker policy references as `config.package`
# i.e.  policies.worker.<name>.config.package: orb_extreme_xiq
[tool.setuptools.packages.find]
include = ["orb_extreme_xiq*"]

[tool.setuptools.dynamic]
version = {attr = "orb_extreme_xiq.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not contract'"
markers = [
    "contract: hits the live XIQ OpenAPI spec over the network (excluded by default; run with `pytest -m contract`)",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["orb_extreme_xiq"]

[tool.ruff.lint.per-file-ignores]
# Fixture params (e.g. `stub_sdk`) are applied for their monkeypatching side
# effect, not read in the test body -- the standard pytest fixture pattern.
"tests/*" = ["ARG001"]
