[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-orb-extreme-platformone"
dynamic = ["version"]
description = "Extreme Platform ONE discovery worker for the NetBox Labs Orb Agent (ingests into NetBox via Diode)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    # Floor transitive HTTP stack versions with known fixes (see security notes).
    "urllib3>=2.7.0",
    "idna>=3.15",
    # The Orb Agent image ships these; pinned here so the package is
    # testable/runnable standalone too.
    "netboxlabs-diode-sdk>=1.0.0",
    "netboxlabs-orb-worker>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "responses>=0.25", "ruff>=0.15"]

[tool.setuptools.packages.find]
include = ["orb_extreme_platformone*"]

[tool.setuptools.dynamic]
version = {attr = "orb_extreme_platformone.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not contract'"
markers = [
    "contract: checks locally downloaded Platform ONE OpenAPI specs (excluded by default; run with `pytest -m contract`, see tests/test_openapi_contract.py)",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "ARG"]

[tool.ruff.lint.isort]
known-first-party = ["orb_extreme_platformone"]

[tool.ruff.lint.per-file-ignores]
# Fixture params (e.g. `stub_sdk`) are applied for their monkeypatching side
# effect, not read in the test body -- the standard pytest fixture pattern.
"tests/*" = ["ARG001"]
